# Mark-Engine

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
App/: CMakeLists.txt  imgui.ini
App/Assets/Shaders/: TriangleTest.frag  TriangleTest.frag.spv  TriangleTest.vert  TriangleTest.vert.spv
App/Source/: Main.cpp
Core/: CMakeLists.txt
Core/Handling/Assets/: SkyboxShader.frag  SkyboxShader.frag.spv  SkyboxShader.vert  SkyboxShader.vert.spv
Core/Include/Mark/: Engine.h
Core/Include/Mark/Settings/: imguiSettings.h
Core/Source/: Core.cpp  Core.h  Engine.cpp
Core/Source/Engine/: Bitmap.h  EarlyCameraController.cpp  EarlyCameraController.h  EngineStats.cpp  EngineStats.h  ModelHandler.cpp  ModelHandler.h  SettingsHandler.cpp  SettingsHandler.h
Core/Source/Platform/: GLFWContext.cpp  GLFWContext.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  imguiHandler.cpp  imguiHandler.h
Core/Source/Renderer/: MarkVulkanCommandBuffers.cpp  MarkVulkanCommandBuffers.h  MarkVulkanCore.cpp  MarkVulkanCore.h  MarkVulkanGraphicsPipeline.cpp  MarkVulkanGraphicsPipeline.h  MarkVulkanGraphicsPipelineCache.cpp  MarkVulkanGraphicsPipelineCache.h  MarkVulkanPhysicalDevices.cpp  MarkVulkanPhysicalDevices.h  MarkVulkanQueue.cpp  MarkVulkanQueue.h  MarkVulkanRenderPass.cpp  MarkVulkanRenderPass.h  MarkVulkanRenderPassCache.cpp  MarkVulkanRenderPassCache.h  MarkVulkanShader.cpp  MarkVulkanShader.h  MarkVulkanSwapChain.cpp  MarkVulkanSwapChain.h  MarkVulkanUniformBuffer.cpp  MarkVulkanUniformBuffer.h  MarkVulkanUtil.h  MarkVulkanVertexBuffer.cpp  MarkVulkanVertexBuffer.h  Mark_VulkanBufferAndMemoryHelper.cpp  Mark_VulkanBufferAndMemoryHelper.h  Mark_VulkanCommandBuffers.cpp  Mark_VulkanCommandBuffers.h  Mark_VulkanCore.cpp  Mark_VulkanCore.h  Mark_VulkanGraphicsPipeline.cpp  Mark_VulkanGraphicsPipeline.h  Mark_VulkanGraphicsPipelineCache.cpp  Mark_VulkanGraphicsPipelineCache.h  Mark_VulkanModelHandler.cpp  Mark_VulkanModelHandler.h  Mark_VulkanPhysicalDevices.cpp  Mark_VulkanQueue.cpp  Mark_VulkanQueue.h  (+21 more)
Core/Source/Renderer/Vulkan/: Mark_BindlessMeshResourceSet.cpp  Mark_BindlessMeshResourceSet.h  Mark_BindlessResourceSet.cpp  Mark_BindlessResourceSet.h  Mark_BufferAndMemoryHelper.cpp  Mark_CommandBuffers.cpp  Mark_CommandBuffers.h  Mark_ComputePipeline.cpp  Mark_ComputePipeline.h  Mark_DescriptorSetBundle.cpp  Mark_DescriptorSetBundle.h  Mark_GraphicsPipeline.cpp  Mark_GraphicsPipeline.h  Mark_GraphicsPipelineCache.cpp  Mark_GraphicsPipelineCache.h  Mark_IndirectRenderingHelper.cpp  Mark_IndirectRenderingHelper.h  Mark_ModelHandler.cpp  Mark_ModelHandler.h  Mark_PhysicalDevices.cpp  Mark_PhysicalDevices.h  Mark_PipelineDescription.h  Mark_Queue.cpp  Mark_Queue.h  Mark_Shader.cpp  Mark_Skybox.cpp  Mark_Skybox.h  Mark_SkyboxResourceSet.cpp  Mark_SkyboxResourceSet.h  Mark_SwapChain.cpp  Mark_SwapChain.h  Mark_TextureHandler.cpp  Mark_TextureHandler.h  Mark_UniformBuffer.cpp  Mark_UniformBuffer.h  Mark_VertexBuffer.cpp  Mark_VertexBuffer.h  Mark_VulkanCore.cpp  Mark_VulkanCore.h  Mark_WindowQueueHelper.cpp  (+4 more)
Core/Source/Utils/: ErrorHandling.h  MarkUtils.h  Mark_FatalHandling.h  Mark_Utils.h  TimeTracker.cpp  TimeTracker.h  VulkanUtils.h
